{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 463,
  "lineage": "68bca255-d929-eb38-d2b9-d7fe3e3940ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "docker_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e94ec90f93120f0b",
            "association_id": "eipassoc-0db9efe6a294337ac",
            "domain": "vpc",
            "id": "eipalloc-0e94ec90f93120f0b",
            "instance": "i-0c368044a74ea820a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-067e60c832a1857c7",
            "private_dns": "ip-10-0-1-147.ec2.internal",
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-50-17-152-176.compute-1.amazonaws.com",
            "public_ip": "50.17.152.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.docker_ec2",
            "aws_security_group.docker_sec",
            "aws_subnet.docker-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:374104755586:instance/i-0c368044a74ea820a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c368044a74ea820a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067e60c832a1857c7",
            "private_dns": "ip-10-0-1-147.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-54-82-7-140.compute-1.amazonaws.com",
            "public_ip": "54.82.7.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052a0bf6805a12c6a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d5d44cc9fa562c4c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084a49a50df9e1fa1",
            "tags": {
              "Name": "docker_project",
              "Os": "ubuntu"
            },
            "tags_all": {
              "Name": "docker_project",
              "Os": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d5d44cc9fa562c4c"
            ]
          },
          "dependencies": [
            "aws_security_group.docker_sec",
            "aws_subnet.docker-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "docker-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:internet-gateway/igw-01bdbe996562c72d3",
            "id": "igw-01bdbe996562c72d3",
            "owner_id": "374104755586",
            "tags": {
              "Name": "docker-igw"
            },
            "tags_all": {
              "Name": "docker-igw"
            },
            "vpc_id": "vpc-0f1fea062dce6ea31"
          },
          "dependencies": [
            "aws_vpc.docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "docker-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:route-table/rtb-0ebcfbb6d5f92ed98",
            "id": "rtb-0ebcfbb6d5f92ed98",
            "owner_id": "374104755586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bdbe996562c72d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "docker-rt"
            },
            "tags_all": {
              "Name": "docker-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1fea062dce6ea31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.docker-igw",
            "aws_vpc.docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "docker-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029ef9b6b8c822ccd",
            "route_table_id": "rtb-0ebcfbb6d5f92ed98",
            "subnet_id": "subnet-084a49a50df9e1fa1"
          },
          "dependencies": [
            "aws_internet_gateway.docker-igw",
            "aws_route_table.docker-rt",
            "aws_subnet.docker-subnet",
            "aws_vpc.docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docker_sec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:security-group/sg-0d5d44cc9fa562c4c",
            "description": "Allow HTTP and SSH traffic via Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5d44cc9fa562c4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "docker_sec_group",
            "name_prefix": "",
            "owner_id": "374104755586",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1fea062dce6ea31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "docker-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:subnet/subnet-084a49a50df9e1fa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084a49a50df9e1fa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374104755586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "docker-subnet"
            },
            "tags_all": {
              "Name": "docker-subnet"
            },
            "vpc_id": "vpc-0f1fea062dce6ea31"
          },
          "dependencies": [
            "aws_vpc.docker-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "docker-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374104755586:vpc/vpc-0f1fea062dce6ea31",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a3eb93f1cb63430",
            "default_route_table_id": "rtb-0d46681151588b18b",
            "default_security_group_id": "sg-0862ad6415963519f",
            "dhcp_options_id": "dopt-05911729ad891de7d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1fea062dce6ea31",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-019903ca621b2990e",
            "ipv6_cidr_block": "2600:1f10:4f6e:d100::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d46681151588b18b",
            "owner_id": "374104755586",
            "tags": {
              "Name": "docker-vpc"
            },
            "tags_all": {
              "Name": "docker-vpc"
            }
          }
        }
      ]
    }
  ]
}